set02/problem08_compile_errors.txt
Compilation started at 2/17/2024, 11:29:47 PM
c:\Users\Dell\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Raghav-rvu-123\set02\problem08.c: In function 'main':
c:\Users\Dell\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Raghav-rvu-123\set02\problem08.c:50:15: warning: passing argument 1 of 'find_area' from incompatible pointer type [-Wincompatible-pointer-types]
     find_area(&t);
               ^
c:\Users\Dell\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Raghav-rvu-123\set02\problem08.c:39:6: note: expected 'Triangle * {aka struct _triangle *}' but argument is of type 'Triangle (*)[(sizetype)(n)]'
 void find_area(Triangle *t);
      ^~~~~~~~~
c:\Users\Dell\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Raghav-rvu-123\set02\problem08.c: In function 'input_n_triangles':
c:\Users\Dell\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Raghav-rvu-123\set02\problem08.c:80:48: error: 'a' undeclared (first use in this function)
         printf("Enter the base of Triangle %d",a+1);
                                                ^
c:\Users\Dell\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Raghav-rvu-123\set02\problem08.c:80:48: note: each undeclared identifier is reported only once for each function it appears in
Compilation finished at 2/17/2024, 11:29:47 PM
Compilation started at 2/17/2024, 11:29:55 PM
c:\Users\Dell\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Raghav-rvu-123\set02\problem08.c: In function 'main':
c:\Users\Dell\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Raghav-rvu-123\set02\problem08.c:50:15: warning: passing argument 1 of 'find_area' from incompatible pointer type [-Wincompatible-pointer-types]
     find_area(&t);
               ^
c:\Users\Dell\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Raghav-rvu-123\set02\problem08.c:39:6: note: expected 'Triangle * {aka struct _triangle *}' but argument is of type 'Triangle (*)[(sizetype)(n)]'
 void find_area(Triangle *t);
      ^~~~~~~~~
c:\Users\Dell\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Raghav-rvu-123\set02\problem08.c: In function 'input_n_triangles':
c:\Users\Dell\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Raghav-rvu-123\set02\problem08.c:80:48: error: 'a' undeclared (first use in this function)
         printf("Enter the base of Triangle %d",a+1);
                                                ^
c:\Users\Dell\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Raghav-rvu-123\set02\problem08.c:80:48: note: each undeclared identifier is reported only once for each function it appears in
Compilation finished at 2/17/2024, 11:29:55 PM
Compilation started at 2/17/2024, 11:30:27 PM
c:\Users\Dell\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Raghav-rvu-123\set02\problem08.c: In function 'main':
c:\Users\Dell\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Raghav-rvu-123\set02\problem08.c:50:15: warning: passing argument 1 of 'find_area' from incompatible pointer type [-Wincompatible-pointer-types]
     find_area(&t);
               ^
c:\Users\Dell\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Raghav-rvu-123\set02\problem08.c:39:6: note: expected 'Triangle * {aka struct _triangle *}' but argument is of type 'Triangle (*)[(sizetype)(n)]'
 void find_area(Triangle *t);
      ^~~~~~~~~
c:\Users\Dell\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Raghav-rvu-123\set02\problem08.c: In function 'input_n_triangles':
c:\Users\Dell\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Raghav-rvu-123\set02\problem08.c:80:48: error: 'a' undeclared (first use in this function)
         printf("Enter the base of Triangle %d",a+1);
                                                ^
c:\Users\Dell\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Raghav-rvu-123\set02\problem08.c:80:48: note: each undeclared identifier is reported only once for each function it appears in
Compilation finished at 2/17/2024, 11:30:27 PM
Compilation started at 2/17/2024, 11:31:33 PM
C:\Users\Dell\AppData\Local\Temp\ccudlEQU.o: In function `main':
c:/Users/Dell/github-classroom/FPC-advanced/fpc-advanced-classroom-1st-year-assignment-Raghav-rvu-123/set02/problem08.c:51: undefined reference to `find_n_areas'
collect2.exe: error: ld returned 1 exit status
Compilation finished at 2/17/2024, 11:31:34 PM
Compilation started at 2/17/2024, 11:34:24 PM
C:\Users\Dell\AppData\Local\Temp\ccoj9M3S.o: In function `main':
c:/Users/Dell/github-classroom/FPC-advanced/fpc-advanced-classroom-1st-year-assignment-Raghav-rvu-123/set02/problem08.c:51: undefined reference to `find_n_areas'
collect2.exe: error: ld returned 1 exit status
Compilation finished at 2/17/2024, 11:34:24 PM
Compilation started at 2/17/2024, 11:34:36 PM
C:\Users\Dell\AppData\Local\Temp\ccU5LIyY.o: In function `main':
c:/Users/Dell/github-classroom/FPC-advanced/fpc-advanced-classroom-1st-year-assignment-Raghav-rvu-123/set02/problem08.c:51: undefined reference to `find_n_areas'
collect2.exe: error: ld returned 1 exit status
Compilation finished at 2/17/2024, 11:34:36 PM
Compilation started at 2/17/2024, 11:34:42 PM
C:\Users\Dell\AppData\Local\Temp\ccYPV5zY.o: In function `main':
c:/Users/Dell/github-classroom/FPC-advanced/fpc-advanced-classroom-1st-year-assignment-Raghav-rvu-123/set02/problem08.c:51: undefined reference to `find_n_areas'
collect2.exe: error: ld returned 1 exit status
Compilation finished at 2/17/2024, 11:34:42 PM
Compilation started at 2/17/2024, 11:36:51 PM
C:\Users\Dell\AppData\Local\Temp\cc0xeytr.o: In function `main':
c:/Users/Dell/github-classroom/FPC-advanced/fpc-advanced-classroom-1st-year-assignment-Raghav-rvu-123/set02/problem08.c:51: undefined reference to `find_n_areas'
collect2.exe: error: ld returned 1 exit status
Compilation finished at 2/17/2024, 11:36:51 PM
Compilation started at 2/17/2024, 11:37:14 PM
C:\Users\Dell\AppData\Local\Temp\ccq073dY.o: In function `main':
c:/Users/Dell/github-classroom/FPC-advanced/fpc-advanced-classroom-1st-year-assignment-Raghav-rvu-123/set02/problem08.c:51: undefined reference to `find_n_areas'
collect2.exe: error: ld returned 1 exit status
Compilation finished at 2/17/2024, 11:37:14 PM
Compilation started at 2/17/2024, 11:49:40 PM
Compilation finished at 2/17/2024, 11:49:41 PM
Compilation started at 2/17/2024, 11:55:56 PM
Compilation finished at 2/17/2024, 11:55:57 PM
